[package]
name = "baldtunes"
version = "0.1.0"
edition = "2021"
authors = ["2imt <contact.2imt@mail.ru>"]
repository = "https://github.com/2IMT/baldtunes"
license-file = "LICENSE"

[dependencies]
audiotags = "0.5.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
serenity = "0.12.4"
songbird = { version = "0.5.0", features = ["builtin-queue", "driver"] }
symphonia = { version = "0.5.4", features = ["mp3"] }
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
